--- a/index.html
+++ b/index.html
@@ -104,6 +104,22 @@ src="https://app.papercups.io/widget.js"
                     <p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;">
                 </div>
             </div><!-- End: Marketing -->
+            <!-- Start: Fruity -->
+            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
+                <div class="text-center">
+                    <h2>BCS Lock</h2>
+                    <p>A simple password generator for MacOS.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="bcs-lock.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" src="assets/img/bcslock.png" style="min-width: 250px;max-width: 70%;">
+                </div>
+            </div><!-- End: Fruity -->
+            <!-- Start: Marketing -->
+            <div style="padding-top: 30px;">
+                <div class="text-center">
+                    <h2 style="color: rgb(255,255,255);">BCS Author</h2>
+                    <p style="color: rgb(255,255,255);">A new, browser-based text editor.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="https://author.borgcreative.com" target="_blank">learn more</a></p><img src="assets/img/bcsauthor.png" style="min-width: 250px;max-width: 70%;">
+                </div>
+            </div><!-- End: Marketing -->
             <!-- Start: more -->
             <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
                 <div class="text-center">
