updated BCS Marketing (page12) and added page13

--- a/page13.html
+++ b/page13.html
@@ -81,7 +81,7 @@ src="https://app.papercups.io/widget.js"
     <main class="page landing-page">
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
             <div class="text">
-                <h1>BCS Marketing</h1><img src="assets/img/adad3.png" width="90%" style="margin-top: -80px;">
+                <h1>BCS Marketing &amp; Data</h1>
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
@@ -97,34 +97,16 @@ src="https://app.papercups.io/widget.js"
                             <div class="col-md-8">
                                 <!-- Start: Intro -->
                                 <div class="intro">
-                                    <h2>What is BCS Marketing?</h2>
-                                    <p>BCS Marketing is a flat-rate, privacy-oriented marketing platform.</p>
+                                    <h2>What data is collected?</h2>
+                                    <p>Ad analytics record session data in lieu of user data. This data includes the country, browser, and operating system the ad was seen on, and the number of times the ad was clicked on.&nbsp;</p>
+                                    <p>All of this is done anonymously with&nbsp;<a href="https://panelbear.com/simple-analytics/" target="_blank">PanelBear Analytics</a>.</p>
                                 </div><!-- End: Intro -->
                             </div>
-                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/contactcard.png" style="width: 100%;"></div>
+                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/data.png" style="width: 100%;"></div>
                         </div>
                     </div>
                 </section><!-- End: Highlight Phone -->
-            </div><!-- Start: 1 Row 3 Columns -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/adviews.png" style="width: 100%;">
-                        <h3>Where are ads distributed?</h3>
-                        <p>We distribute your ads to blogs, news sites, software sites, social media affiliates, and more.</p>
-                    </div>
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/check.png" style="width: 100%;">
-                        <h3>How are ads moderated?</h3>
-                        <p>All ads are inspected prior to launching in order to verify that they meet our content&nbsp;guidelines.</p>
-                    </div>
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
-                        <h3>How is advertising data managed?</h3>
-                        <p>We keep all data secure and private. The small amount of data recorded is done so <a href="page13.html">anonymously</a>!</p>
-                    </div>
-                </div>
-            </div><!-- End: 1 Row 3 Columns -->
-            <!-- Start: Contact Form Clean -->
-            <section class="contact-clean" style="background: #fff;"><div><iframe src="https://tally.so/embed/wkGvMw?hideTitle=1&transparentBackground=1" width="100%" height="500"
-    frameborder="0" marginheight="0" marginwidth="0" title="BCS Marketing Setup"></iframe></div></section><!-- End: Contact Form Clean -->
+            </div>
         </section>
         <section class="clean-block about-us" style="padding: 0px 0px 0px;">
             <!-- Start: Footer Basic -->
