--- a/accounts.html
+++ b/accounts.html
@@ -66,7 +66,7 @@
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);border-style: none;filter: saturate(100%);background: url(&quot;assets/img/bcs-cover.jpg&quot;) center no-repeat;">
             <div class="text">
                 <h1>Accounts</h1>
-                <div class="btn-group" role="group"><a class="btn btn-primary" role="button" style="background: #3d566e;border-color: #3d566e;" href="emailsettings.html">Change my email settings</a><a class="btn btn-primary" role="button" style="background: #3d566e;border-color: #3d566e;" href="https://tally.so/r/nrOqMm" target="_blank">Delete my account</a></div>
+                <div class="btn-group" role="group"><a class="btn btn-primary" role="button" style="background: #3d566e;border-color: #3d566e;" href="https://cloud.borgcreative.com/survey/index.php/399895?newtest=Y&amp;lang=en" target="_blank">Create Account</a><a class="btn btn-primary" role="button" style="background: #3d566e;border-color: #3d566e;" href="https://cloud.borgcreative.com/survey/index.php/383428?newtest=Y&amp;lang=en" target="_blank">Delete my account</a></div>
             </div>
         </section>
         <section class="clean-block about-us" style="padding: 0px 0px 0px;">
