Updated the Coconut page

--- a/coconut.html
+++ b/coconut.html
@@ -66,7 +66,7 @@
     <main class="page landing-page">
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/coconutcover2.png&quot;) center / cover no-repeat;border-style: none;filter: saturate(100%);">
             <div class="text">
-                <h1>Coconut</h1>
+                <h1>Coconut</h1><!-- Start: gamejolt download button --><a href="https://gamejolt.com/games/coconut/629123" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a><!-- End: gamejolt download button -->
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_Maintenance_re_59vn.svg" style="width: 100%;">
                         <h3>An independent database.</h3>
-                        <p>We have produced our own blocking list.</p>
+                        <p>While other extensions use popular lists, we have built our own database to provide a better, dynamic extension.</p>
                     </div>
                     <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_privacy_protection_nlwy.svg" style="width: 100%;">
                         <h3>Built for privacy.</h3>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
             </div><!-- End: 1 Row 3 Columns -->
-            <p>Please read the terms and conditions before use. By downloading Fruity, you automatically agree to the terms, conditions, and privacy policy.</p>
+            <p>Please read the terms and conditions before use. By downloading Coconut, you automatically agree to the terms, conditions, and privacy policy.</p><!-- Start: gamejolt download button --><a href="https://gamejolt.com/games/coconut/629123" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a><!-- End: gamejolt download button -->
         </section>
     </main>
     <section class="clean-block about-us" style="padding: 0px 0px 0px;">
