--- a/coconut.html
+++ b/coconut.html
@@ -107,7 +107,8 @@
                     </div>
                 </div>
             </div><!-- End: 1 Row 3 Columns -->
-            <p>Please read the terms and conditions before use. By downloading Coconut, you automatically agree to the terms, conditions, and privacy policy.</p><!-- Start: gamejolt download button --><a href="https://gamejolt.com/games/coconut/629123" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a><!-- End: gamejolt download button -->
+            <!-- Start: gamejolt download button --><a href="https://gamejolt.com/games/coconut/629123" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a><!-- End: gamejolt download button -->
+            <p style="padding: 10px;">Please read the terms and conditions before use. By downloading Coconut, you automatically agree to the terms, conditions, and privacy policy.</p>
         </section>
     </main>
     <section class="clean-block about-us" style="padding: 0px 0px 0px;">
