--- a/animation.html
+++ b/animation.html
@@ -4,17 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Animation</title>
+    <title>BCS Card</title>
     <meta name="theme-color" content="#fff">
-    <meta property="og:image" content="assets/img/BCS_twitter.jpg">
-    <meta property="og:type" content="website">
-    <meta name="twitter:description" content="A new web browser for MacOS.">
-    <meta name="twitter:image" content="assets/img/fruity-banner.png">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Fruity">
-    <meta name="description" content="We have several animation stations. Our stations are running Cheetah 3D, Blender 3D, and Pencil 2D.
-
-">
+    <meta name="twitter:title" content="Borg Creative Studios">
+    <meta property="og:type" content="website">
+    <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
+    <meta name="twitter:image" content="assets/img/bcs-card.jpg">
+    <meta name="description" content="Shareable, digital business cards">
+    <meta property="og:image" content="assets/img/bcs-card.jpg">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -54,8 +52,9 @@
         <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="softwareproducts.html">Software</a></li>
+                    <li class="nav-item"><a class="nav-link" href="webproducts.html">Web</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Business</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                     <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="http://shop.borgcreative.com/" target="_blank">merch<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
@@ -66,21 +65,50 @@
         </div>
     </nav>
     <main class="page landing-page">
-        <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);border-style: none;filter: saturate(100%);background: url(&quot;assets/img/bcs-3.jpg&quot;) center / cover no-repeat;">
+        <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);border-style: none;filter: saturate(100%);background: url(&quot;assets/img/bcs-3.jpg&quot;) center;">
             <div class="text">
-                <h1>Animation</h1>
+                <h1>Animation &amp; Rendering</h1>
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
             <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info" style="color: #3d566e;"></h2>
+                    <h1 style="color: #3d566e;"></h1>
+                    <p></p>
+                </div><!-- Start: Highlight Phone -->
+                <section class="highlight-phone" style="background: #f6f6f6;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <!-- Start: Intro -->
+                                <div class="intro">
+                                    <h2>Animation</h2>
+                                    <p>Telling your story through motion is what animation is all about!</p>
+                                    <p>We utilize Blender 3D, Cheetah 3D, Wick, &amp; Keyshape to make your story come to life.</p>
+                                </div><!-- End: Intro -->
+                            </div>
+                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/animation.png" style="width: 100%;"></div>
+                        </div>
+                    </div>
+                </section><!-- End: Highlight Phone -->
                 <!-- Start: Highlight Phone -->
                 <section class="highlight-phone" style="background: #f6f6f6;">
-                    <h2>Animation</h2>
-                    <p>We have several animation stations. Our stations are running Cheetah 3D, Blender 3D, and Pencil 2D.</p><img class="device" src="assets/img/screen-shot-2020-02-17-at-11.26.33-am.png" style="width: 100%;">
-                    <h2>Rendering</h2>
-                    <p>We have the resources to render multiple projects at a time. We render with the Cheetah 3D, Falcon, and Cycles render engines.</p>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <!-- Start: Intro -->
+                                <div class="intro">
+                                    <h2>Rendering</h2>
+                                    <p>We have an optimized system and pipeline for efficient, cost-effective rendering.</p>
+                                </div><!-- End: Intro -->
+                            </div>
+                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/media.png" style="width: 100%;"></div>
+                        </div>
+                    </div>
                 </section><!-- End: Highlight Phone -->
-            </div>
+            </div><!-- Start: Contact Form Clean -->
+            <section class="contact-clean" style="background: #fff;"><a class="btn btn-primary" role="button" style="background: #3d566e;border-style: none;" href="consultation.html">Request Consultation</a></section><!-- End: Contact Form Clean -->
         </section>
     </main>
     <section class="clean-block about-us" style="padding: 0px 0px 0px;">
