--- a/coconut.html
+++ b/coconut.html
@@ -52,8 +52,9 @@
         <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="softwareproducts.html">Software</a></li>
+                    <li class="nav-item"><a class="nav-link" href="webproducts.html">Web</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Business</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                     <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="http://shop.borgcreative.com/" target="_blank">merch<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
@@ -66,7 +67,8 @@
     <main class="page landing-page">
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/coconutcover2.png&quot;) center / cover no-repeat;border-style: none;filter: saturate(100%);">
             <div class="text">
-                <h1>Coconut</h1><!-- Start: gamejolt download button --><a href="https://gamejolt.com/games/coconut/629123" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a><!-- End: gamejolt download button -->
+                <h1>Coconut</h1>
+                <h5>Early Access</h5><!-- Start: gamejolt download button --><a href="https://gamejolt.com/games/coconut/629123" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a><!-- End: gamejolt download button -->
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
@@ -95,11 +97,11 @@
                 <div class="row">
                     <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_startup_life_2du2.svg" style="width: 100%;">
                         <h3>Designed for MacOS.</h3>
-                        <p>Built for Apple's Safari browser.</p>
+                        <p>Built for Apple's Safari browser using Cocoa and JSON.</p>
                     </div>
                     <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_Maintenance_re_59vn.svg" style="width: 100%;">
                         <h3>An independent database.</h3>
-                        <p>While other extensions use popular lists, we have built our own database to provide a better, dynamic extension.</p>
+                        <p>We have built our own database to provide a better, dynamic extension.</p>
                     </div>
                     <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_privacy_protection_nlwy.svg" style="width: 100%;">
                         <h3>Built for privacy.</h3>
