--- a/accounts.html
+++ b/accounts.html
@@ -54,8 +54,9 @@
         <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="softwareproducts.html">Software</a></li>
+                    <li class="nav-item"><a class="nav-link" href="webproducts.html">Web</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Business</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                     <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="http://shop.borgcreative.com/" target="_blank">merch<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
