--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
         <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="softwareproducts.html">Software</a></li>
+                    <li class="nav-item"><a class="nav-link" href="webproducts.html">Web</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Business</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                     <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="http://shop.borgcreative.com/" target="_blank">merch<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
@@ -108,8 +109,23 @@
             <!-- Start: more -->
             <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
                 <div class="text-center">
-                    <h2>And so much more!</h2>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="services.html">our products and services</a></p><img src="assets/img/more.png" style="min-width: 250px;max-width: 70%;">
+                    <h2>And so much more!</h2><!-- Start: 1 Row 3 Columns -->
+                    <div class="container" style="padding-bottom: 15px;">
+                        <div class="row">
+                            <div class="col-md-4"><img src="assets/img/webdesign.png" width="100%">
+                                <h4>Web Products</h4>
+                                <p class="text-white" style="margin-bottom: 0px;"><a href="webproducts.html">learn more</a></p>
+                            </div>
+                            <div class="col-md-4"><img src="assets/img/business.png" width="100%">
+                                <h4>Business Products</h4>
+                                <p class="text-white" style="margin-bottom: 0px;"><a href="services.html">learn more</a></p>
+                            </div>
+                            <div class="col-md-4"><img src="assets/img/thinking.png" width="100%">
+                                <h4>Software</h4>
+                                <p class="text-white" style="margin-bottom: 0px;"><a href="softwareproducts.html">learn more</a></p>
+                            </div>
+                        </div>
+                    </div><!-- End: 1 Row 3 Columns -->
                 </div>
             </div><!-- End: more -->
         </section>
