--- a/services.html
+++ b/services.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Services &amp; Products</title>
+    <title>Home</title>
     <meta name="theme-color" content="#fff">
     <meta property="og:image" content="assets/img/BCS_twitter.jpg">
     <meta name="twitter:image" content="assets/img/IMG_1347.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Borg Creative Studios">
     <meta property="og:type" content="website">
+    <meta name="description" content="Our team develops software, produces video games, and creates digital media resources.">
     <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
-    <meta name="description" content="">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -52,8 +52,9 @@
         <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="softwareproducts.html">Software</a></li>
+                    <li class="nav-item"><a class="nav-link" href="webproducts.html">Web</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="services.html">Business</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                     <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="http://shop.borgcreative.com/" target="_blank">merch<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
@@ -63,81 +64,75 @@
             </div>
         </div>
     </nav>
-    <main class="page landing-page">
-        <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
-            <div class="text">
-                <h1>Our products &amp; services</h1>
-            </div>
+    <main class="page landing-page" style="background: linear-gradient(#1F1E2C, #1A1A1A);">
+        <section>
+            <!-- Start: web design -->
+            <div style="padding-top: 30px;">
+                <div class="text-center">
+                    <h2 class="text-white">Web Design&nbsp;</h2>
+                    <p class="text-white">Cost-efficient websites for anyone or any business.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="webdesign.html">learn more</a></p><img src="assets/img/webdesign2.png" style="min-width: 250px;max-width: 70%;">
+                </div>
+            </div><!-- End: web design -->
+            <!-- Start: Fruity -->
+            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
+                <div class="text-center">
+                    <h2>BCS Marketing</h2>
+                    <p>Privacy by-design flat-rate marketing for anyone.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;">
+                </div>
+            </div><!-- End: Fruity -->
+            <!-- Start: Marketing -->
+            <div style="padding-top: 30px;">
+                <div class="text-center">
+                    <h2 style="color: rgb(255,255,255);">Interactive Web Content</h2>
+                    <p style="color: rgb(255,255,255);">Interactive content to build your brand or increase customer interaction.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="interactive.html" target="_blank">learn more</a></p><img src="assets/img/interactive.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
+                </div>
+            </div><!-- End: Marketing -->
+            <!-- Start: more -->
+            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
+                <div class="text-center">
+                    <h2>BCS Card</h2>
+                    <p>Contactless, digital business cards</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="bcs-card.html">learn more</a></p><img src="assets/img/share.png" style="min-width: 250px;max-width: 70%;" width="50%">
+                </div>
+            </div><!-- End: more -->
+            <!-- Start: Marketing -->
+            <div style="padding-top: 30px;">
+                <div class="text-center">
+                    <h2 style="color: rgb(255,255,255);">Video</h2>
+                    <p style="color: rgb(255,255,255);">Video production for you and your brand.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="video.html" target="_blank">learn more</a></p><img src="assets/img/media.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
+                </div>
+            </div><!-- End: Marketing -->
+            <!-- Start: more -->
+            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
+                <div class="text-center">
+                    <h2>Animation</h2>
+                    <p>Animation for customer engagement and entertainment.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="animation.html">learn more</a></p><img src="assets/img/animation.png" style="min-width: 250px;max-width: 70%;" width="50%">
+                </div>
+            </div><!-- End: more -->
         </section>
-        <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
-            <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info" style="color: #3d566e;"></h2>
-                    <h1 style="color: #3d566e;"></h1>
-                    <p></p>
-                </div>
-            </div>
-            <h1>Software &amp; Web Apps</h1><!-- Start: 1 Row 2 Columns -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/gaming.png" style="width: 100%;">
-                        <h3>Grocery Catcher</h3><a class="btn btn-outline-primary btn-lg text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center" role="button" href="https://gamejolt.com/games/grocerycatcher/523501" style="background: #3d566e;color: #fff;border-style: none;margin: 20px 0px 0px;" target="_blank">Learn More</a>
-                    </div>
-                    <div class="col-md-6"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/typewriter.png" style="width: 100%;">
-                        <h3>BCS Author</h3><a class="btn btn-outline-primary btn-lg text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center" role="button" href="https://author.borgcreative.com/" style="background: #3d566e;color: #fff;border-style: none;margin: 20px 0px 0px;" target="_blank">Learn More</a>
-                    </div>
-                </div>
-            </div><!-- End: 1 Row 2 Columns -->
-            <!-- Start: 1 Row 2 Columns -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/fruity%20kiwi.png" style="width: 100%;">
-                        <h3>Fruity</h3><a class="btn btn-outline-primary btn-lg text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center" role="button" href="fruity.html" style="background: #3d566e;color: #fff;border-style: none;margin: 20px 0px 0px;">Learn More</a>
-                    </div>
-                    <div class="col-md-6"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/bcs-lock.png" style="width: 100%;">
-                        <h3>BCS Lock</h3><a class="btn btn-outline-primary btn-lg text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center" role="button" href="bcs-lock.html" style="background: #3d566e;color: #fff;border-style: none;margin: 20px 0px 0px;">Learn More</a>
-                    </div>
-                </div>
-            </div><!-- End: 1 Row 2 Columns -->
-            <h1 style="margin: 30px 0px 0px;">Services</h1>
-            <div class="row">
-                <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/adviews.png" style="width: 100%;">
-                    <h3>BCS Marketing</h3><a class="btn btn-outline-primary btn-lg text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center" role="button" href="page12.html" style="background: #3d566e;color: #fff;border-style: none;margin: 20px 0px 0px;">Learn More</a>
-                </div>
-                <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/share.png" style="width: 100%;">
-                    <h3>BCS Card</h3><a class="btn btn-outline-primary btn-lg text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center" role="button" href="bcs-card.html" style="background: #3d566e;color: #fff;border-style: none;margin: 20px 0px 0px;">Learn More</a>
-                </div>
-                <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/media.png" style="width: 100%;">
-                    <h3>Video</h3><a class="btn btn-outline-primary btn-lg text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center" role="button" href="video.html" style="background: #3d566e;color: #fff;border-style: none;margin: 20px 0px 0px;">Learn More</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/animation.png" style="width: 100%;">
-                    <h3>Animation</h3><a class="btn btn-outline-primary btn-lg text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center" role="button" href="animation.html" style="background: #3d566e;color: #fff;border-style: none;margin: 20px 0px 0px;">Learn More</a>
-                </div>
-                <div class="col-md-6"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/interactive.png" style="width: 100%;">
-                    <h3>Interactive</h3><a class="btn btn-outline-primary btn-lg text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center" role="button" href="interactive.html" style="background: #3d566e;color: #fff;border-style: none;margin: 20px 0px 0px;">Learn More</a>
-                </div>
-            </div>
+        <section class="clean-block about-us" style="padding: 0px 0px 0px;">
+            <!-- Start: Footer Basic -->
+            <footer class="footer-basic">
+                <!-- Start: Social Icons -->
+                <div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
+                <!-- Start: Links -->
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="index.html">Home</a></li>
+                    <li class="list-inline-item"><a href="services.html">Services</a></li>
+                    <li class="list-inline-item"><a href="about.html">About</a></li>
+                    <li class="list-inline-item"><a href="accountterms.html">Terms</a></li>
+                    <li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li>
+                </ul><!-- End: Links -->
+                <!-- Start: Copyright -->
+                <p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright -->
+            </footer><!-- End: Footer Basic -->
         </section>
     </main>
-    <section class="clean-block about-us" style="padding: 0px 0px 0px;">
-        <!-- Start: Footer Basic -->
-        <footer class="footer-basic">
-            <!-- Start: Social Icons -->
-            <div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
-            <!-- Start: Links -->
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="index.html">Home</a></li>
-                <li class="list-inline-item"><a href="services.html">Services</a></li>
-                <li class="list-inline-item"><a href="about.html">About</a></li>
-                <li class="list-inline-item"><a href="accountterms.html">Terms</a></li>
-                <li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li>
-            </ul><!-- End: Links -->
-            <!-- Start: Copyright -->
-            <p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright -->
-        </footer><!-- End: Footer Basic -->
-    </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/script.min.js"></script>
