--- a/webproducts.html
+++ b/webproducts.html
@@ -95,7 +95,7 @@
                 <div class="text-center">
                     <h2>Interactive Web Content</h2>
                     <p>Interactive content to build your brand or increase customer interaction.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="interactive.html">learn more</a></p><img src="assets/img/interactive.png" style="min-width: 250px;max-width: 70%;">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="interactive.html">learn more</a></p><img src="assets/img/interactive.png" style="min-width: 250px;max-width: 70%;" width="50%">
                 </div>
             </div><!-- End: more -->
             <!-- Start: Marketing -->
@@ -103,7 +103,7 @@
                 <div class="text-center">
                     <h2 style="color: rgb(255,255,255);">BCS Card</h2>
                     <p style="color: rgb(255,255,255);">Contactless, digital business cards</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="bcs-card.html">learn more</a></p><img src="assets/img/share.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="bcs-card.html">learn more</a></p><img src="assets/img/share.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
                 </div>
             </div><!-- End: Marketing -->
         </section>
