--- a/services.html
+++ b/services.html
@@ -87,7 +87,7 @@
                 <div class="text-center">
                     <h2 style="color: rgb(255,255,255);">Interactive Web Content</h2>
                     <p style="color: rgb(255,255,255);">Interactive content to build your brand or increase customer interaction.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="interactive.html" target="_blank">learn more</a></p><img src="assets/img/interactive.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="interactive.html">learn more</a></p><img src="assets/img/interactive.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
                 </div>
             </div><!-- End: Marketing -->
             <!-- Start: more -->
@@ -103,7 +103,7 @@
                 <div class="text-center">
                     <h2 style="color: rgb(255,255,255);">Video</h2>
                     <p style="color: rgb(255,255,255);">Video production for you and your brand.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="video.html" target="_blank">learn more</a></p><img src="assets/img/media.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="video.html">learn more</a></p><img src="assets/img/media.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
                 </div>
             </div><!-- End: Marketing -->
             <!-- Start: more -->
