Added animations to social icons and some images

--- a/services.html
+++ b/services.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
 <!-- Matomo -->
 <script>
@@ -79,7 +80,7 @@
                 <div class="text-center">
                     <h2>BCS Marketing</h2>
                     <p>Privacy by-design flat-rate marketing for anyone.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;">
                 </div>
             </div><!-- End: Fruity -->
             <!-- Start: Marketing -->
@@ -87,7 +88,7 @@
                 <div class="text-center">
                     <h2 style="color: rgb(255,255,255);">Interactive Web Content</h2>
                     <p style="color: rgb(255,255,255);">Interactive content to build your brand or increase customer interaction.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="interactive.html">learn more</a></p><img src="assets/img/interactive.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="interactive.html">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/interactive.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
                 </div>
             </div><!-- End: Marketing -->
             <!-- Start: more -->
@@ -95,7 +96,7 @@
                 <div class="text-center">
                     <h2>BCS Card</h2>
                     <p>Contactless, digital business cards</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="bcs-card.html">learn more</a></p><img src="assets/img/share.png" style="min-width: 250px;max-width: 70%;" width="50%">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="bcs-card.html">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/share.png" style="min-width: 250px;max-width: 70%;" width="50%">
                 </div>
             </div><!-- End: more -->
             <!-- Start: Marketing -->
@@ -103,7 +104,7 @@
                 <div class="text-center">
                     <h2 style="color: rgb(255,255,255);">Video</h2>
                     <p style="color: rgb(255,255,255);">Video production for you and your brand.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="video.html">learn more</a></p><img src="assets/img/media.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="video.html">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/media.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
                 </div>
             </div><!-- End: Marketing -->
             <!-- Start: more -->
@@ -111,7 +112,7 @@
                 <div class="text-center">
                     <h2>Animation</h2>
                     <p>Animation for customer engagement and entertainment.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="animation.html">learn more</a></p><img src="assets/img/animation.png" style="min-width: 250px;max-width: 70%;" width="50%">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="animation.html">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/animation.png" style="min-width: 250px;max-width: 70%;" width="50%">
                 </div>
             </div><!-- End: more -->
         </section>
@@ -119,7 +120,7 @@
             <!-- Start: Footer Basic -->
             <footer class="footer-basic">
                 <!-- Start: Social Icons -->
-                <div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
+                <div class="social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-whatsapp"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
                 <!-- Start: Links -->
                 <ul class="list-inline">
                     <li class="list-inline-item"><a href="index.html">Home</a></li>
@@ -134,6 +135,7 @@
         </section>
     </main>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/script.min.js"></script>
 </body>
