--- a/softwareproducts.html
+++ b/softwareproducts.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
 <!-- Matomo -->
 <script>
@@ -79,7 +80,7 @@
                 <div class="text-center">
                     <h2>BCS Lock</h2>
                     <p>A simple password generator for MacOS.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="bcs-lock.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" src="assets/img/bcslock.png" style="min-width: 250px;max-width: 70%;">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="bcs-lock.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/bcslock.png" style="min-width: 250px;max-width: 70%;">
                 </div>
             </div><!-- End: Fruity -->
             <!-- Start: Marketing -->
@@ -87,7 +88,7 @@
                 <div class="text-center">
                     <h2 style="color: rgb(255,255,255);">BCS Author</h2>
                     <p style="color: rgb(255,255,255);">A new, browser-based text editor.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="https://author.borgcreative.com" target="_blank">learn more</a></p><img src="assets/img/bcsauthorpromo.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="https://author.borgcreative.com" target="_blank">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/bcsauthorpromo.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;">
                 </div>
             </div><!-- End: Marketing -->
             <!-- Start: more -->
@@ -95,7 +96,7 @@
                 <div class="text-center">
                     <h2>Coconut Extension</h2>
                     <p>An extension for blocking cookies and unwanted content on the web.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="coconut.html">learn more</a></p><img src="assets/img/icon_512x512.png" style="min-width: 250px;max-width: 70%;">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="coconut.html">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/icon_512x512.png" style="min-width: 250px;max-width: 70%;">
                 </div>
             </div><!-- End: more -->
         </section>
@@ -103,7 +104,7 @@
             <!-- Start: Footer Basic -->
             <footer class="footer-basic">
                 <!-- Start: Social Icons -->
-                <div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
+                <div class="social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-whatsapp"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
                 <!-- Start: Links -->
                 <ul class="list-inline">
                     <li class="list-inline-item"><a href="index.html">Home</a></li>
@@ -118,6 +119,7 @@
         </section>
     </main>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/script.min.js"></script>
 </body>
